--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Modul11</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Modul1</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	<body>
 
 	<script type="text/javascript" src="scripts.js"></script>
 	</body>
 </html>
+
